# API-development

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fire  jupyter_notebook_config_py3.py  main.py  main_b.py  notes.txt  pyproject.toml  run_jupyter.sh  test_main_b.py
HomeCreditDefaultPrediction/: main.py
HomeCreditDefaultPrediction/models/: __init__.py  db.py  output.py  string.py
HomeCreditDefaultPrediction/models/api/lookup/: input.py  output.py
HomeCreditDefaultPrediction/models/api/ops/: output.py
HomeCreditDefaultPrediction/prediction/: data_settings.py  default_prediction.py  model_settings.py
HomeCreditDefaultPrediction/prediction/model_binaries/: README.md
HomeCreditDefaultPrediction/prediction/model_binaries/archive_binaries/: README.md
HomeCreditDefaultPrediction/prediction/train_pipelines/: bureau_pipeline.py  config.py  previous_balance_pipeline.py  previous_pipeline.py
HomeCreditDefaultPrediction/routers/: default.py  ops.py
HomeCreditDefaultPrediction/utils/: __init__.py  app.py  db.py  logging.py
VirtualDataWarehouse/: README.md
alembic/: env.py
alembic/versions/: f94500860f82_added_account_table.py
dev-tools/: service.docker-entrypoint.sh
model-retraining/: DoETL.py  README.md  train_model.py
model-retraining/binary_files/: features.txt
model-retraining/train_pipelines/: bureau_pipeline.py  config.py  previous_balance_pipeline.py  previous_pipeline.py  utils.py
test_cli/: fire
tests/: test_model.py
