[tool.poetry]
name = "income-service"
version = "0.1.0"
description = "Income verification/prediction service"
authors = ["Zach Hu <superhzf@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
dill = "0.2.9"
lightgbm = "2.2.3"
numpy = "1.16.3"
fastapi = "0.52.0"
pandas = "0.24.2"
uvicorn = "0.7.1"
sqlalchemy = "1.3.3"
psycopg2-binary = "2.8.2"
scikit-learn = "0.21.1"
alembic = "1.0.10"
wget = "3.2"
structlog = "19.1.0"
python-json-logger = "0.1.11"
textblob = "0.15.2"
aiohttp = "3.5.4"
toml = "0.10.0"
psutil = "5.6.3"
pyrsistent = "0.15.3"
requests = "2.22.0"
pyparsing = "2.4.0"

[tool.poetry.dev-dependencies]
hypothesis = "^4.18"
jupyter = "^1.0"
mypy = "0.710"
pytest = "^4.4"
pytest-xdist = "^1.28"
pytest-forked = "^1.0"
pytest-cov = "^2.6"
flake8 = "^3.7"
pre-commit = "^1.16"
request = "^2019.4"
colorama = "^0.4.1"
pyinstrument = "^3.0"
tqdm="^4.32"
coveralls="1.8.1"
isort = "4.3.20"
pytest-pudb = "^0.7.0"
pytest-timeout = "^1.3"
pytest-asyncio = "0.10.0"
itsdangerous = "1.1.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"